--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <h3>
         Welcome to my dashboard 1.
     </h3>
+
+    <h3>
+        Welcome to my dashboard 2.
+    </h3>
     
 </body>
 </html>
